[package]
name = "inline_format"
description = "A more readable collection of string formatting macros."
version = "0.2.3"
edition = "2021"
authors = ["Kyza"]
license = "MIT"
repository = "https://github.com/Kyza/inline_format"
readme = "./README.md"
keywords = ["macro", "format", "string", "text", "proc_macro"]
categories = ["development-tools::build-utils", "value-formatting"]

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full", "extra-traits"] }
proc-macro-error = "1.0.4"

[lib]
proc-macro = true
